plugins {
    id 'java'
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation(platform('org.junit:junit-bom:5.9.3'))
    testImplementation('org.junit.jupiter:junit-jupiter')
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation('org.assertj:assertj-core:3.25.1')
}

test {
    useJUnitPlatform()
}

sourceSets {
    test {
        java { srcDirs = ['src/test/java'] }
    }
}

tasks.withType(JavaCompile) {
    options.release = 21
}

